# class-plan-api

./: .gitignore  Dockerfile  alembic.ini  app.py  app_doc.py  docker-compose.yml  pyproject.toml  requeriments.txt  requirements.txt  run.py  setup.cfg
alembic/: env.py
alembic/versions/: 4bd30ca8a0db_initial_tables_creation.py
instance/: config.py
migrations/versions/: e25b83818ee2_.py
scripts/: migrate.sh  startup.sh
src/: app.py
src/application/controllers/: class_plan_controllers.py
src/application/cqs/commands/: class_plan_commands.py
src/application/cqs/commands/handlers/: class_plan_commands_handlers.py
src/application/cqs/queries/handlers/: class_plan_queries_handlers.py
src/application/dtos/: class_plan_dtos.py
src/application/dtos/decoders/: class_plan_dtos_decoders.py
src/application/dtos/encoders/: class_plan_dtos_encoders.py
src/config/: config.py
src/documentation/: documentations.py
src/domain/entities/: class_plan.py
src/domain/exceptions/: domais_expections.py
src/domain/repositories/: class_plan_repository.py
src/domain/value_objects/: group.py  subject.py  teacher.py
src/infrastructure/blueprints/: class_plan_blueprints.py
src/infrastructure/db/orm/: class_plan_orms.py  orms.py
src/infrastructure/openapi/: specs.py
src/infrastructure/repositories/: class_plan_repositories.py
src/resources/: blueprints.py  class_plan.py  schemas.py
src/resources/schemas/: schemas.py
tests/reources/: test_class_plan_resource.py
tests/resources/: test_class_plan_resource.py
