[metadata]
name = class-plan-api
version = 0.0.1

[options]
packages = find:
packages_dir = src
tests_require =
    Flask-Testing
    testcontainers
install_requires =
    alembic
    Flask
    Flask-RESTful
    flask-apispec
    Flask-Migrate
    Flask-SQLAlchemy
    marshmallow
    psycopg2-binary
    SQLAlchemy; python_version == "3.9.7"

